# moviemaestro

./: .env.example  .gitignore  LETTERBOXD_DATA_FLOW.md  Makefile  README.md  main.py  pyproject.toml  railway.json
.beads/: issues.jsonl  metadata.json
app/: db.py  main.py  settings.py
app/pipeline/: backfill_years.py  film_ratings.py  job_state.py  letterboxd_throttle.py  missing.py  orchestrator.py  user_films.py  user_ratings.py  user_rss.py  users.py
tests/: conftest.py  fakes.py  test_backfill_endpoint.py  test_backfill_years.py  test_healthz.py  test_job_state.py  test_letterboxd_throttle.py  test_orchestrator.py  test_pipeline_leaves.py  test_refresh_user_endpoint.py  test_scrape_user.py  test_settings.py  test_start.py  test_user_rss.py
