[project]
name = "moviemaestro"
version = "0.1.0"
description = "Service that orchestrates Letterboxd film data scraping for the bpdiscord Hater Rankings refresh pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "supabase>=2.5",
    "pydantic-settings>=2.4",
    "letterboxdpy @ git+https://github.com/nmcassa/letterboxdpy.git@v6.5.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
